Add password error message (w/o functionality)

--- a/index.html
+++ b/index.html
@@ -31,23 +31,24 @@
                     <label for="name-first">FIRST NAME</label>
                     <input id="name-first" name="name_first" type="text">
                 </div>
-                <div>            
+                <div>
                     <label for="name-last">LAST NAME</label>
                     <input id="name-last" name="name_last" type="text">
                 </div>
-                <div>            
+                <div>
                     <label for="email">EMAIL</label>
                     <input id="email" name="email" type="email">
                 </div>
-                <div>            
+                <div>
                     <label for="phone-number">PHONE NUMBER</label>
                     <input id="phone-number" name="phone_number" type="tel">
                 </div>
-                <div>            
+                <div>
                     <label for="password1">PASSWORD</label>
-                    <input id="password1" name="password1" type="password" required>
+                    <input class="pw-no-match" id="password1" name="password1" type="password" required>
+                    <span></span>
                 </div>
-                <div>            
+                <div>
                     <label for="password2">CONFIRM PASSWORD</label>
                     <input id="password2" name="password2" type="password" required>
                 </div>
